--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "cookies-next": "^4.3.0",
     "immer": "^10.1.1",
     "next": "15.0.1",
     "react": "^18.3.1",
